fix bootstrap & material justify alignment

--- a/src/components/tabs/themes/light/tabs.base.scss
+++ b/src/components/tabs/themes/light/tabs.base.scss
@@ -21,7 +21,7 @@ $tabs-animation-function: cubic-bezier(.35, 0, .25, 1);
 
 :host([alignment='justify']) [part='headers-scroll'] {
     ::slotted(*) {
-        flex-basis: 0;
+        flex-basis: 100px;
         flex-grow: 1;
         max-width: 100%;
     }
